# react-native-pure-cpp-turbo-module-library

./: CONTRIBUTING.md  LICENSE  PureCppTurboModuleLibrary.podspec  README.md  package-lock.json  package.json  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/purecppturbomodulelibrary/: PureCppTurboModuleLibraryModule.kt  PureCppTurboModuleLibraryPackage.kt
android/src/main/jni/: OnLoad.cpp
cpp/: PureCppImpl.cpp  PureCppImpl.h  pure-cpp-turbo-module-library.cpp  pure-cpp-turbo-module-library.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile  RCTAppDelegate+TurboModule.mm
example/ios/PureCppTurboModuleLibraryExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  RCTAppDelegate+TurboModule.h
example/ios/PureCppTurboModuleLibraryExample.xcodeproj/: project.pbxproj
example/ios/PureCppTurboModuleLibraryExample.xcodeproj/xcshareddata/xcschemes/: PureCppTurboModuleLibraryExample.xcscheme
example/ios/PureCppTurboModuleLibraryExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: OnLoad.mm  PureCppTurboModuleLibrary.h  PureCppTurboModuleLibrary.mm  PureCppTurboModuleLibraryProvider.h  PureCppTurboModuleLibraryProvider.mm
src/: NativePureCppTurboModuleLibrary.ts  index.tsx
(+2 files in other folders)
